--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,8 +28,9 @@
   </head>
     
   <body>
-    
-   <%= render 'shared/navbar' %>
+   <div class="mb-3">
+    <%= render 'shared/navbar' %>
+   </div>
    <%= render 'shared/flash_messages' %>
     <%= yield %>
   </body>
