--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,17 @@
-<h1>Restaurant Reservation</h1>
+<h1 class="text-center">Restaurant Reservation</h1>
+
+<div class="d-flex justify-content-center my-3">
+  <%= link_to 'Previous', request.params.merge(start_date: @previous_month.to_date), class: 'btn btn-secondary mx-2' %>
+  <%= link_to 'Today', request.params.merge(start_date: Date.today), class: 'btn btn-primary mx-2' %>
+  <%= link_to 'Next', request.params.merge(start_date: @next_month.to_date), class: 'btn btn-secondary mx-2' %>
+</div>
+
+<%= month_calendar do |date| %>
+  <div class="card m-2 p-3">
+    <div class="card-body">
+      <h5 class="card-title">
+        <%= date.strftime("%B %d, %Y") %>
+      </h5>
+    </div>
+  </div>
+<% end %>
