--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,10 +7,11 @@
 </div>
 
 <div class="d-flex justify-content-center my-3">
-  <%= link_to 'Previous', request.params.merge(start_date: @previous_month.to_date), class: 'btn btn-secondary mx-2' %>
-  <%= link_to 'Today', request.params.merge(start_date: Date.today), class: 'btn btn-primary mx-2' %>
-  <%= link_to 'Next', request.params.merge(start_date: @next_month.to_date), class: 'btn btn-secondary mx-2' %>
+  <%= link_to 'Previous', request.params.merge(start_date: @previous_month.to_date), class: 'btn btn-secondary mx-2', data: { turbo: false } %>
+  <%= link_to 'Today', request.params.merge(start_date: Date.today), class: 'btn btn-primary mx-2', data: { turbo: false } %>
+  <%= link_to 'Next', request.params.merge(start_date: @next_month.to_date), class: 'btn btn-secondary mx-2', data: { turbo: false } %>
 </div>
+
 
 <%= month_calendar do |date| %>
   <% 
@@ -36,11 +37,57 @@
     <div class="card-body">
       <h5 class="card-title"><%= date.strftime("%B %d, %Y") %></h5>
       
-      <%= button_tag button_text, 
-          class: "#{button_class} mt-2", 
-          disabled: button_disabled,
-          data: { date: date } %>
+    <%= button_tag button_text, 
+    class: "#{button_class} mt-2 open-time-slot-modal", 
+    disabled: button_disabled,
+    data: { date: date } %>
+
     </div>
   </div>
 <% end %>
+
+<script>
+  // 1. CLEANUP: Before Turbo replaces the DOM (like when you click Next/Previous)
+  document.addEventListener("turbo:before-render", function () {
+    // Close all visible modals
+    document.querySelectorAll('.modal.show').forEach(modalEl => {
+      const modal = bootstrap.Modal.getInstance(modalEl);
+      if (modal) modal.hide();
+    });
+
+    // Remove any lingering modal backdrops
+    document.querySelectorAll('.modal-backdrop').forEach(el => el.remove());
+
+    // Remove modal-open class from body (which prevents scrolling)
+    document.body.classList.remove('modal-open');
+  });
+
+  // 2. AFTER LOAD: Attach click handlers for modal buttons
+  document.addEventListener("turbo:load", function () {
+    attachModalHandlers();
+  });
+
+  // 3. Helper to attach modal buttons
+  function attachModalHandlers() {
+    document.querySelectorAll(".open-time-slot-modal").forEach(button => {
+      button.addEventListener("click", function () {
+        const date = button.dataset.date;
+
+        // Remove existing modal if any
+        const existingModal = document.getElementById("timeSlotModal");
+        if (existingModal) {
+          existingModal.remove();
+        }
+
+        fetch(`/time_slots?date=${date}`)
+          .then(response => response.text())
+          .then(html => {
+            document.body.insertAdjacentHTML("beforeend", html);
+            const modal = new bootstrap.Modal(document.getElementById("timeSlotModal"));
+            modal.show();
+          });
+      });
+    });
+  }
+</script>
 
