--- a/app/views/time_slots/_modal.html.erb
+++ b/app/views/time_slots/_modal.html.erb
@@ -9,8 +9,9 @@
         <% if time_slots.any? %>
           <ul class="list-group mb-3">
             <% time_slots.each do |slot| %>
-              <li class="list-group-item d-flex justify-content-between align-items-center flex-column align-items-start">
-                <div class="w-100 d-flex justify-content-between">
+              <li class="list-group-item d-flex justify-content-between align-items-start">
+                <div class="w-100 d-flex justify-content-between align-items-start gap-3">
+
                   <div>
                     <strong><%= slot.start_time.strftime("%I:%M %p") %> - <%= slot.end_time.strftime("%I:%M %p") %></strong>
                     <div>Active Tables: <%= slot.active_tables %></div> 
@@ -27,8 +28,12 @@
                     <% end %>
                   </div>
                   <div class="btn-group">
-                    <%= link_to "Edit", edit_time_slot_path(slot), class: "btn btn-warning btn-sm" %>
-                    <%= button_to "Delete", time_slot_path(slot), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-danger btn-sm" %>
+                    <%= link_to "Tables", table_assignments_path(time_slot_id: slot.id), class: "btn btn-primary btn-sm" %>
+                    <%= link_to "Edit", edit_time_slot_path(slot), class: "btn btn-warning btn-sm d-inline-block w-auto" %>
+                    <%= button_to "Delete", time_slot_path(slot), method: :delete,
+                        form: { data: { turbo: false } },
+                        onclick: "return confirm('Are you sure you want to delete this time slot?');",
+                        class: "btn btn-danger btn-sm" %>
                   </div>
                 </div>
               </li>
@@ -37,7 +42,6 @@
         <% else %>
           <p>No time slots available for this date.</p>
         <% end %>
-
         <%= link_to "Add Time Slot", new_time_slot_path(date: date), class: "btn btn-success" %>
       </div>
     </div>
