--- a/app/views/time_slots/edit.html.erb
+++ b/app/views/time_slots/edit.html.erb
@@ -1,6 +1,6 @@
 <h2><%= @time_slot.new_record? ? "Add Time Slot" : "Edit Time Slot" %></h2>
 
-<%= form_with model: @time_slot do |f| %>
+<%= form_with model: @time_slot, data: { turbo: false } do |f| %>
   <div class="mb-3">
     <%= f.label :date %>
     <%= f.date_field :date, class: "form-control" %>
@@ -9,11 +9,6 @@
   <div class="mb-3">
     <%= f.label :start_time %>
     <%= f.time_field :start_time, class: "form-control" %>
-  </div>
-
-  <div class="mb-3">
-    <%= f.label :end_time %>
-    <%= f.time_field :end_time, class: "form-control" %>
   </div>
 
   <div class="mb-3">
