--- a/app/views/reservations/_modal_user.html.erb
+++ b/app/views/reservations/_modal_user.html.erb
@@ -28,12 +28,7 @@
                     <% end %>
                   </div>
                   <div class="btn-group">
-                    <%= link_to "Tables", table_assignments_path(time_slot_id: slot.id), class: "btn btn-primary btn-sm" %>
-                    <%= link_to "Edit", edit_time_slot_path(slot), class: "btn btn-warning btn-sm d-inline-block w-auto" %>
-                    <%= button_to "Delete", time_slot_path(slot), method: :delete,
-                        form: { data: { turbo: false } },
-                        onclick: "return confirm('Are you sure you want to delete this time slot?');",
-                        class: "btn btn-danger btn-sm" %>
+                  <%= link_to "Reserve", new_reservation_path(time_slot_id: slot.id), class: "btn btn-primary btn-sm" %>
                   </div>
                 </div>
               </li>
