--- a/app/views/reservations/new.html.erb
+++ b/app/views/reservations/new.html.erb
@@ -2,7 +2,8 @@
 
 <div class="row">
   <% @table_assignments.each do |assignment| %>
-    <div class="col-md-2 mb-4"> <!-- Changed from col-md-4 to col-md-2 -->
+    <% next if assignment.is_reserved %>
+    <div class="col-md-2 mb-4">
       <div class="card shadow-sm">
         <div class="card-body">
           <h5 class="card-title">Table <%= assignment.table.table_number %></h5>
@@ -28,4 +29,3 @@
   <% end %>
 </div>
 <%= link_to "Back to Time Slots", root_path, class: "btn btn-secondary mt-3" %>
-
