--- a/app/views/reservations/_modal_user.html.erb
+++ b/app/views/reservations/_modal_user.html.erb
@@ -11,25 +11,31 @@
             <% time_slots.each do |slot| %>
               <li class="list-group-item d-flex justify-content-between align-items-start">
                 <div class="w-100 d-flex justify-content-between align-items-start gap-3">
-
                   <div>
                     <strong><%= slot.start_time.strftime("%I:%M %p") %> - <%= slot.end_time.strftime("%I:%M %p") %></strong>
-                    <div>Active Tables USER: <%= slot.active_tables %></div> 
+                    <div>Available tables: <%= slot.unreserved_tables %></div>
 
                     <% if slot.table_assignments.any? %>
                       <div class="mt-2">
                         <strong>Table Assignments:</strong>
                         <% slot.table_assignments.each do |assignment| %>
-                          <div>
-                            Table <%= assignment.table.table_number %>: Max Persons = <%= assignment.max_persons %>
-                          </div>
+                          <% if assignment.is_reserved.nil? || assignment.is_reserved == false %>
+                            <div>
+                              Table <%= assignment.table.table_number %>: Max Persons = <%= assignment.max_persons %>
+                            </div>
+                          <% end %>
                         <% end %>
                       </div>
                     <% end %>
                   </div>
-                  <div class="btn-group">
-                  <%= link_to "Reserve", new_reservation_path(time_slot_id: slot.id), class: "btn btn-primary btn-sm" %>
-                  </div>
+
+                  <!-- Only show the "Reserve" button if there are available tables -->
+                  <% if slot.unreserved_tables > 0 %>
+                    <div class="btn-group">
+                      <%= link_to "Reserve", new_reservation_path(time_slot_id: slot.id), class: "btn btn-primary btn-sm" %>
+                    </div>
+                  <% end %>
+
                 </div>
               </li>
             <% end %>
