--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,18 +1,15 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary navbar-shadow">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <%= link_to 'Register', registration_path, class: "nav-link" %>
+            <%= link_to 'User', root_path, class: 'nav-link' %>
         </li>
         <li class="nav-item">
-<%= link_to "My Reservations", my_reservations_reservations_path, class: "btn btn-info" %>
-
-
+        <%= link_to "My Reservations", my_reservations_reservations_path, class: "btn btn-info", form: { "data-turbo": false }  %>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
