--- a/app/views/table_assignments/edit.html.erb
+++ b/app/views/table_assignments/edit.html.erb
@@ -1,15 +1,19 @@
-<%= form_with(model: @table_assignment, url: table_assignment_path(@table_assignment), local: true) do |form| %>
-  <div class="form-group">
-    <%= form.label :max_persons, "Max Persons" %>
-    <%= form.number_field :max_persons, min: 1, class: "form-control", required: true %>
-  </div>
-  
-  <div class="form-group">
-    <%= form.label :is_available, "Availability" %>
-    <%= form.select :is_available, [['Available', true], ['Not Available', false]], {}, class: 'form-control' %>
-  </div>
+<div class="d-flex justify-content-center mt-5">
+  <div class="card shadow-sm p-4" style="width: 400px;">
+    <div class="card-body">
+      <h5 class="card-title text-center mb-4">Edit Table Assignment</h5>
 
-  <div class="form-group">
-    <%= form.submit "Update Table Assignment", class: "btn btn-success" %>
+      <%= form_with(model: @table_assignment, url: table_assignment_path(@table_assignment), local: true, data: { turbo: false }) do |form| %>
+        <div class="form-group mb-3">
+          <%= form.label :max_persons, "Max Persons" %>
+          <%= form.number_field :max_persons, min: 1, class: "form-control", required: true %>
+        </div>
+        
+        <div class="form-group text-center">
+          <%= form.submit "Update Table Assignment", class: "btn btn-success" %>
+        </div>
+      <% end %>
+      
+    </div>
   </div>
-<% end %>
+</div>
