--- a/app/views/time_slots/_modal.html.erb
+++ b/app/views/time_slots/_modal.html.erb
@@ -14,7 +14,7 @@
 
                   <div>
                     <strong><%= slot.start_time.strftime("%I:%M %p") %> - <%= slot.end_time.strftime("%I:%M %p") %></strong>
-                    <div>Active Tables: <%= slot.active_tables %></div> 
+                    <div>Available tables: <%= slot.unreserved_tables %></div> 
 
                     <% if slot.table_assignments.any? %>
                       <div class="mt-2">
