--- a/app/views/reservations/edit.html.erb
+++ b/app/views/reservations/edit.html.erb
@@ -27,4 +27,4 @@
   </div>
 <% end %>
 
-<%= link_to "Back to My Reservations", admin_all_reservations_path, class: "btn btn-secondary mt-3" %>
+<%= link_to "Back to Reservations", admin_all_reservations_path, class: "btn btn-secondary mt-3" %>
