--- a/app/views/reservations/confirm.html.erb
+++ b/app/views/reservations/confirm.html.erb
@@ -21,7 +21,7 @@
       <%= f.hidden_field :time_slot_id %>
       <%= f.hidden_field :table_assignment_id %>
       <!-- Optionally, if you allow status update in creation, you can include it -->
-      <%= f.hidden_field :status, value: "Pending" %>
+      <%= f.hidden_field :status, value: "Confirmed" %>
 
       <div class="form-group mt-3">
         <%= f.submit "Confirm Reservation", class: "btn btn-success" %>
